made custom scrollbar and fixed upload css

--- a/ghi/src/CreateOutfit/CreateOutfit.css
+++ b/ghi/src/CreateOutfit/CreateOutfit.css
@@ -34,7 +34,7 @@
 .label-input input::placeholder{
     color: rgba(0, 0, 0, 0.25);
 }
-.outfit-center-piece{
+.outfit-center-piece-create{
     width: 60vw;
     height: 60vh;
     background-color: #282b30;
