--- a/ghi/src/Dashboard/Dashboard.css
+++ b/ghi/src/Dashboard/Dashboard.css
@@ -221,7 +221,7 @@ body{
 .card{
     background-color: white;
     height: 50vh;
-    width: 20vw;
+    width: 22vw;
     border: 7px solid white;
     max-height: 100%;
     border-radius: 15%;
@@ -272,8 +272,8 @@ select{
 }
 
 .dashButton {
-    height: 8vh;
-    width: 16vw;
+    height: 11vh;
+    width: 20vw;
     border: 3px solid #ffffff;
     border-radius: 25px 25px 25px 25px;
     background-color: rgba(255, 0, 247, 0.131);
@@ -305,3 +305,31 @@ select{
     transform: scaleX(1);
     overflow: hidden;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: none;
+    scrollbar-color: #4c525c #282b30;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 20px;
+    position: absolute;
+    max-height: 90%;
+    height: 90%;
+
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #282b3000;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #4c525c;
+    border-radius: 10px;
+    border: 0px none #ff0000;
+  }
